--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "groq-sdk": "^0.32.0",
     "jsonwebtoken": "^9.0.2",
     "mcp-sdk": "^0.1.0",
     "mongoose": "^8.18.0"
